--- a/racinggame/v4.final.html
+++ b/racinggame/v4.final.html
@@ -142,6 +142,9 @@ function populatePopup(){
     //generate question
     var origverb = wordsArray[currentWord].word_string;
 
+    var sentenceBefore = '<span class = "sbefore">I feel the need to talk</span></br>';
+    var sentenceAfter = '<span class = "safter">Please let me talk</span></br>';
+    toDisplay+=sentenceBefore;
     var qstring = '<span name = "question"> ';
       for(j = 0; j<fsarray.length; j++){
         if(j+1 == wordsArray[currentWord].word_index){
@@ -153,7 +156,7 @@ function populatePopup(){
     }
       qstring += '</span>';
     toDisplay+=qstring+"</br>";
-
+    toDisplay+=sentenceAfter;
     // radio button for the textbox?
     for(i = 0; i<optionLength;i++){
         toDisplay = toDisplay + '<input type = "radio" name = "answer" id="option'+ i +'" value = ' + optionarray[i];
