--- a/racinggame/v4.final.html
+++ b/racinggame/v4.final.html
@@ -133,10 +133,12 @@ function displayPopup() {
 
 function populatePopup(){
 
-      var optionarray = wordsArray[currentWord].option_list;
-      var optionLength = optionarray.length;
+    var optionarray = wordsArray[currentWord].option_list;
+    var optionLength = optionarray.length;
 
     var toDisplayPhrase = "";
+    var beforeWord = ""; //whatever comes before the word(s) we are correcting
+    var afterWord = ""; //whatever comes after the word(s) we are correcting
     var toDisplay = "";
     //generate question
     var origverb = wordsArray[currentWord].word_string;
@@ -144,20 +146,35 @@ function populatePopup(){
     var sentenceBefore = '<span class = "sbefore">This is the sentence that comes before.</span>';
     var sentenceAfter = '<span class = "safter">This is the next sentence.</span></br>';
     toDisplayPhrase+=sentenceBefore;
+    beforeWord+=sentenceBefore;
     var qstring = '<span name = "question"> ';
+    beforeWord+= '<span name = "question"> ';
     var boldWord = "";
+    var thereyet = 0;
     for(j = 0; j<fsarray.length; j++){
+      if (thereyet==1) {
+        afterWord += fsarray[j] + " ";
+      }
       if(j+1 == wordsArray[currentWord].word_index){
         qstring+="<b>" + fsarray[j] + "</b> ";
-        boldWord = fsarray[j];
+        boldWord = "<b>" + fsarray[j] + "</b> ";
+        thereyet=1;
       }
       else{
         qstring += fsarray[j] + " ";
       }
+      if (thereyet==0) {
+        beforeWord+="<b>" + fsarray[j] + "</b> ";
+      }
     }
     qstring += '</span>';
+    afterWord += '</span>';
     toDisplayPhrase+=qstring;
     toDisplayPhrase+=sentenceAfter;
+    afterWord+=sentenceAfter;
+
+    //console.log(beforeWord);
+    //console.log(afterWord);
 
     document.getElementById("phrase").innerHTML = toDisplayPhrase;
 
@@ -175,7 +192,7 @@ function populatePopup(){
 
     }
 
-    toDisplay+='<input type = "radio" name = "answer" id="delete"><label for = "delete"> Delete ' + origverb + " </label> </br>"
+    toDisplay+='<input type = "radio" name = "answer" id="delete" value="delete"><label for = "delete"> [delete] ' + " </label> </br>"
     toDisplay+='<input type = "radio" name = "answer" id="modifyRadio"><input type = "text" name = "answer" id="modify" placeholder="other">'
     //toDisplay+='<input type = "text" name = "answer" id="modify" placeholder="other"></br>'
     document.getElementById("question").innerHTML = toDisplay;
@@ -190,30 +207,34 @@ function populatePopup(){
       radiobtn.checked = true;
     });
 
-    //switch text in sentence to whatever is selected
-    $( "input[type=radio]" ).focus(function() {
-      radiobtn = document.getElementById("modifyRadio");
-      radiobtn.checked = true;
-    });
+    var inputTextContent;
+    var inputText = document.getElementById('modify');
+    inputText.onkeyup = function(){
+        console.log("INPUT");
+        inputTextContent = inputText.value;
+        console.log(inputTextContent);
+    }
 
-    $('input[name=answer]:checked', '#questionform').val(function() {
-    //$('#questionform input').on('change', function() {
-    console.log("checked!!!");
-      var toDisplayPhrase2 = "";
-      toDisplayPhrase2+=sentenceBefore;
-      var boldWord = "";
-      for(k = 0; j<fsarray.length; k++){
-        if(k+1 == wordsArray[currentWord].word_index){
-          qstring+="<b>" + ($("#questionform input[type='radio']:checked").val()) + "</b> ";
-          boldWord = fsarray[j];
-        }
-        else{
-          qstring += fsarray[j] + " ";
-        }
+    //switch text in sentence to whatever is selected
+    $('#questionform input').on('change', function() {
+
+      var newWord = $('input[name=answer]:checked', '#questionform').val();
+
+      var inputText = document.getElementById('modify');
+      inputText.onkeyup = function(){
+          console.log("INPUT");
+          newWord = inputText.value;
       }
-      qstring += '</span>';
-      toDisplayPhrase2+=qstring;
-      toDisplayPhrase2+=sentenceAfter;
+
+      console.log(newWord);
+
+      var toDisplayPhrase2 = "";
+      toDisplayPhrase2+=beforeWord
+      if (newWord == "delete") {
+        newWord = "";
+      }
+      toDisplayPhrase2+="<b>"+newWord+"</b> ";
+      toDisplayPhrase2+=afterWord;
 
       document.getElementById("phrase").innerHTML = toDisplayPhrase2;
     });
