fixed the error that does not save the words after the last word to be fixed

--- a/racinggame/v4.final.html
+++ b/racinggame/v4.final.html
@@ -309,6 +309,10 @@ function popDown(){
     timeoutVar = window.setTimeout(displayPopup,10000);
 }
 function throw_to_server(){
+  var lowlcopy = lowlimit;
+  for(j = lowlcopy; j<fsarray.length;j++){
+    toReturn+=fsarray[j] + " ";
+  }
   console.log("final result is : " + toReturn);
 }
 </script>
